plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(11)

minecraft {
    mappings channel: 'official', version: '1.16.5'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        name = 'spongepowered-repo'
        url = 'https://repo.spongepowered.org/maven'
    }

    ivy {
        setUrl('https://download.nodecdn.net/containers/reforged/server/release')
        metadataSources {
            artifact()
        }
        patternLayout {
            artifact('[revision]/[artifact].[ext]')
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'

    shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'

    shadow project(':commons')
    shadow(project(':forge16')) {
        transitive = false
    }

    implementation 'pixelmon:Pixelmon-1.16.5-9.1.7-server:9.1.7'
    implementation 'uk.co.envyware:helios:1.1-SNAPSHOT'
}

shadowJar {
    configurations = [project.configurations.shadow]
//    dependsOn('reobfJar')

    relocate('org.spongepowered.configurate', 'com.envyful.api.commons.shade.configurate')
    relocate('org.yaml.snakeyaml', 'com.envyful.api.commons.shade.snakeyaml')
    relocate('io.leangen.geantyref', 'com.envyful.api.commons.shade.geantyref')

    exclude 'net.minecraft'
    exclude "**/module-info.class"
}

//reobf {
//    shadowJar {}
//}
//
//jar.finalizedBy('reobfJar')